--- a/Uczenie maszynowe semestr 5/Lista 3/sieci_splotowe_pytorch.ipynb
+++ b/Uczenie maszynowe semestr 5/Lista 3/sieci_splotowe_pytorch.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "a00f8d6e",
    "metadata": {},
    "outputs": [],
@@ -71,10 +71,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "c130de48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading to C:\\Users\\egrac\\.cache\\kagglehub\\datasets\\jockeroika\\clouds-photos\\1.archive...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5.10M/5.10M [00:00<00:00, 6.98MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# getting path to dataset\n",
@@ -91,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "17c5b81a",
    "metadata": {},
    "outputs": [],
@@ -121,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "c8dc8e40",
    "metadata": {},
    "outputs": [],
@@ -192,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "dbaddf07",
    "metadata": {},
    "outputs": [],
@@ -253,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "0898d677",
    "metadata": {},
    "outputs": [],
@@ -324,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "34ebeffa",
    "metadata": {},
    "outputs": [],
@@ -394,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "94feff99",
    "metadata": {},
    "outputs": [],
@@ -407,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "8bb3f6e6",
    "metadata": {},
    "outputs": [],
@@ -418,7 +447,7 @@
     "optimizer2 = optim.Adam(net2.parameters(), lr=0.001)\n",
     "optimizer3 = optim.Adam(net3.parameters(), lr=0.001)\n",
     "\n",
-    "for epoch in range(20):\n",
+    "for epoch in range(3):\n",
     "    for images, labels in dataloader_train:\n",
     "        optimizer1.zero_grad()\n",
     "        optimizer2.zero_grad()\n",
@@ -439,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "82ad1e7a",
    "metadata": {},
    "outputs": [
@@ -447,9 +476,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "net1 acc: 0.7181069850921631\n",
-      "net2 acc: 0.7860082387924194\n",
-      "net3 acc: 0.7551440596580505\n"
+      "net1 acc: 0.6172839403152466\n",
+      "net2 acc: 0.7366254925727844\n",
+      "net3 acc: 0.6090534925460815\n"
      ]
     }
    ],
