--- a/Analiza Przeżycia/Lista_11/Lista_11.Rmd
+++ b/Analiza Przeżycia/Lista_11/Lista_11.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Lista 11"
+title: "Sprawozdanie 2"
 subtitle: "Analiza przeżycia"
 author: "Marta Stankiewicz (282244) \n Kacper Szmigielski (282255)"
 header-includes:
@@ -9,11 +9,6 @@ header-includes:
    - \usepackage{float}
    - \usepackage{amsthm}
    - \newtheorem{definition}{Definicja}[section]
-   - \usepackage{draftwatermark}
-   - \SetWatermarkText{{\rmfamily\bfseries KACPER SZMIGIELSKI \\ \rmfamily\bfseries MARTA STANKIEWICZ}}
-   - \SetWatermarkScale{2}
-   - \SetWatermarkColor[gray]{0.9}
-   - \SetWatermarkFontSize{26pt}
 output: 
   pdf_document:
     toc: true
@@ -71,39 +66,21 @@ dane$status <- dane$status -1
 
 # Zadanie 1
 
-## Treść
-
-Oszacować parametry modelu proporcjonalnych szans, przyjmując za zmienną zależną zmienną
-time, a za charakterystyki zmienne: age, sex, ph.ecog, ph.karno.
-Uwaga. Zadanie to można wykonać korzystając np. z funkcji prop.odds biblioteki timereg lub funkcji
-nltm biblioteki o tej samej nazwie pakietu R. Należy jednak zwrócić uwagę na inną definicję modelu
-proporcjonalnych szans niż była podana na wykładzie wykorzystywaną w tej drugiej funkcji.
-
-
-## Rozwiązanie
+**Dopasowanie modelu(oszacowanie parametrów)**
 
 ```{r rozw1, echo = TRUE}
 
-model<-prop.odds(Event(time, cause = status) ~ age + factor(sex) + factor(ph.ecog) + ph.karno,
-             data = dane,n.sim=500,profile=1)
+model<-prop.odds(Event(time, cause = status) ~ age +
+                 factor(sex) +
+                 factor(ph.ecog) + 
+                 ph.karno,
+                 data = dane,n.sim=500,profile=1)
 
 ```
 
 # Zadanie 2
 
-## Treść
 
-Podać interpretację współczynników modelu z zadania 1
-
-## Rozwiązanie
-
-
-```{r rozw2}
-
-kable(model$gamma)
-
-
-```
 
 Korzystając z poniższych wzorów możemy podać interpretację:
 
@@ -114,28 +91,35 @@ $$
 $$
 \ln\!\left(\frac{\theta_{z_1}(t)}{\theta_{z_2}(t)}\right) = \beta^{T}(z_1 - z_2)
 $$
-
-- Zmienna \texttt{age} ma współczynnik $$\gamma>0,$$ co oznacza, że wraz ze wzrostem wieku rosną \textbf{szanse (odds) wystąpienia zdarzenia do czasu $$t$$} (przy stałych pozostałych zmiennych). Równoważnie: $$\exp(\gamma)>1.$$
-
-- Zmienna \texttt{sex} (kategoryczna) ma współczynnik $$\gamma<0$$ dla poziomu porównywanego do poziomu referencyjnego (bazowego). Oznacza to, że w tej grupie \textbf{szanse (odds) zajścia zdarzenia do czasu $$t$$} są mniejsze niż w grupie bazowej, tj. $$\exp(\gamma)<1.$$
-
-- Zmienna \texttt{ph.ecog} (kategoryczna) ma współczynniki $$\gamma>0$$ dla poszczególnych poziomów w porównaniu do poziomu referencyjnego (np. $$1 \text{ vs } 0,\ 2 \text{ vs } 0,\ 3 \text{ vs } 0$$). Wskazuje to, że osoby z wyższym \texttt{ph.ecog} mają \textbf{większe szanse (odds) wystąpienia zdarzenia do czasu $$t$$} niż osoby z poziomu bazowego, czyli $$\exp(\gamma)>1.$$
-
-- Dla zmiennej ciągłej \texttt{ph.karno} otrzymano $$\gamma<0,$$ co oznacza, że wraz ze wzrostem \texttt{ph.karno} \textbf{maleją szanse (odds) zajścia zdarzenia do czasu $$t$$} (tj. $$\exp(\gamma)<1$$). Jeśli jednak w poprzedniej analizie (Lista 10) współczynnik dla \texttt{ph.karno} był \textbf{nieistotny statystycznie}, to również tutaj wniosek o kierunku efektu należy traktować ostrożnie: przy braku istotności znak współczynnika może zmieniać się między dopasowaniami/modelami i nie powinien być interpretowany jako stabilny efekt.
+$$
+\ln\left({\theta_{z_1}(t)}\right)=\beta^{T}(z_1).
+$$
 
 
+**Tabela współczynników**
+
+```{r rozw2}
+
+kable(model$gamma, caption = "Tabela otrzymanych wsp. beta", digits = 4)
+
+b_age = model$gamma["age",]
+b_sex = model$gamma["factor(sex)2",]
+b_karno = model$gamma["ph.karno",]
+
+
+```
+
+- Zmienna \texttt{age} ma współczynnik $\beta$ = `r b_age`>0, co oznacza, że wraz ze wzrostem wieku rosną \textbf{szanse (odds) wystąpienia zdarzenia do czasu $$t$$} (przy stałych pozostałych zmiennych). Równoważnie: $$\exp(\beta)>1.$$
+
+- Zmienna \texttt{sex} (kategoryczna) ma współczynnik $\beta$ = `r b_sex`>0 dla poziomu porównywanego do poziomu referencyjnego (bazowego). Oznacza to, że w tej grupie \textbf{szanse (odds) zajścia zdarzenia do czasu $$t$$} są mniejsze niż w grupie bazowej, tj. $$\exp(\beta)<1.$$
+
+- Zmienna \texttt{ph.ecog} (kategoryczna) ma współczynniki $$\beta>0$$ dla poszczególnych poziomów w porównaniu do poziomu referencyjnego (np. $$1 \text{ vs } 0,\ 2 \text{ vs } 0,\ 3 \text{ vs } 0$$). Wskazuje to, że osoby z wyższym \texttt{ph.ecog} mają \textbf{większe szanse (odds) wystąpienia zdarzenia do czasu $$t$$} niż osoby z poziomu bazowego, czyli $$\exp(\beta)>1.$$
+
+- Dla zmiennej ciągłej \texttt{ph.karno} otrzymano $\beta$ = `r b_karno`<0 co oznacza, że wraz ze wzrostem \texttt{ph.karno} \textbf{maleją szanse (odds) zajścia zdarzenia do czasu $$t$$} (tj. $$\exp(\beta)<1$$). Jeśli jednak w poprzedniej analizie (Lista 10) współczynnik dla \texttt{ph.karno} był \textbf{nieistotny statystycznie}, to również tutaj wniosek o kierunku efektu należy traktować ostrożnie: przy braku istotności znak współczynnika może zmieniać się między dopasowaniami/modelami i nie powinien być interpretowany jako stabilny efekt.
 
 # Zadanie 3
 
-## Treść
-
-Wyznaczyć oszacowanie bazowej skumulowanej funkcji hazardu i bazowej funkcji przeżycia odpowiadającej rozkładowi czasu życia (przyjmując model opisany w zadaniu 1).
-Uwaga. To zadanie można wykonać korzystając np. z funkcji nltm biblioteki o tej samej nazwie.
-
-
-## Rozwiązanie
-
-```{r rozw3}
+```{r rozw, fig.cap="Podstawowa funkcja przeżycia i skumulowanego hazardu"}
 
 s <-  predict(model, Z = c(0,0,0,0,0,0))
 
@@ -148,10 +132,13 @@ df <- data.frame(
 
 p1 <- ggplot() +
   geom_step(data = df, aes(x = t, y = s0,     color = "S0")) +
-  labs(color = "Legenda")
+  labs(color = "Legenda")+
+  ggtitle("Oszacowanie podstawowej funkcji przeżycia")
+
 p2 <- ggplot() +
   geom_step(data = df, aes(x = t, y = H0, color = "hazard")) +
-  labs(color = "Legenda")
+  labs(color = "Legenda")+
+  ggtitle("Oszacowanie podstawowego skumulowanego Hazardu")
 
 p1 / p2
 
@@ -159,11 +146,6 @@ p1 / p2
 
 
 # Zadanie 4
-
-## Treść
-
-Wyznaczyć oszacowanie skumulowanej funkcji hazardu odpowiadającej rozkładowi czasu życia
-(przyjmując model opisany w zadaniu 1)
 
 ```{r model_z_listy_10}
 
@@ -173,7 +155,6 @@ model_l10 <- coxph(Surv(time, status) ~ age + factor(sex) + factor(ph.ecog) + ph
 
 ```
 
-## Rozwiązanie
 
 ```{r zad4}
 
@@ -189,7 +170,6 @@ nd <- data.frame(
   ph.ecog = factor(c(1, 2), levels = levels(factor(dane$ph.ecog))),
   ph.karno = c(90, 90)-mean_ph_karno
 )
-
 
 
 s1 <-  predict(model, Z = z1)
@@ -224,28 +204,35 @@ df2 <- data.frame(
   S0  = c(s2$S0),
   H =  -log(c(s2$S0)) 
 )
+```
 
 
+```{r  wykres_hazardu_p1}
 p1_H <- ggplot() +
   geom_step(data = df1,    aes(x = t, y = H, color = "H (model 1)"),linewidth = 1.1) +
   geom_step(data = df1_l10, aes(x = t, y = H, color = "H (model l10)"),linewidth = 1.1)+
   ggtitle("Funkcja H dla pacjenta 1")
+```
 
+```{r  wykres_loghazardu_p1}
 p1_logH <- ggplot() +
   geom_step(data = df1,    aes(x = t, y = log(H), color = "log(H) (model 1)"),linewidth = 1.1) +
-  geom_step(data = df1_l10, aes(x = t, y = log(H), color = "log(H) (model l10)"),linewidth = 1.1)+
-  ggtitle("Funkcja log(H) dla pacjenta 1")
+  geom_step(data = df1_l10, aes(x = t, y = log(H), color = "log(H) (model lista_10)"),linewidth = 1.1)+
+  ggtitle("Funkcja log(H) \n dla pacjenta 1")
+```
 
-
+```{r  wykres_hazardu_p2}
 p2_H <- ggplot() +
   geom_step(data = df2,    aes(x = t, y = H, color = "H (model 1)"),linewidth = 1.1) +
   geom_step(data = df2_l10, aes(x = t, y = H, color = "H (model l10)"),linewidth = 1.1)+
   ggtitle("Funkcja H dla pacjenta 2")
+```
 
+```{r  wykres_loghazardu, fig.cap="wykresy-skumulowanego-hazardu"}
 p2_logH <-ggplot() +
   geom_step(data = df2,    aes(x = t, y = log(H), color = "log(H) (model 1)"),linewidth = 1.1) +
-  geom_step(data = df2_l10, aes(x = t, y = log(H), color = "log(H) (model l10)"),linewidth = 1.1)+
-  ggtitle("Funkcja log(H) dla pacjenta 2")
+  geom_step(data = df2_l10, aes(x = t, y = log(H), color = "log(H) (model lista_10)"),linewidth = 1.1)+
+  ggtitle("Funkcja log(H) \n dla pacjenta 2")
 
 (p1_H | p2_H) +
   plot_layout(guides = "collect") &
@@ -253,25 +240,23 @@ p2_logH <-ggplot() +
 
 
 ```
-Widzimy, że w przypadku pacjenta 1 skumulowany hazard rośnie wyraźnie szybciej, gdy użyjemy modelu proporcjonalnych szans, niż wtedy, gdy korzystamy z modelu proporcjonalnych hazardów Coxa. Oznacza to, że model proporcjonalnych szans przewiduje dla tego pacjenta gorsze przeżycie (większe skumulowane ryzyko w czasie) niż model Coxa.
 
-W przypadku pacjenta 2 krzywe są bardzo podobne mniej więcej do 625 dnia, a później zaczynają się rozjeżdżać. W dalszej części obserwacji różnice między modelami rosną, jednak interpretację samej końcówki należy traktować ostrożnie, ponieważ w ogonie czasu często zostaje niewiele obserwacji i pojedyncze zdarzenia potrafią powodować wyraźne „skoki” krzywej.
+W przypadku pacjenta 1  widać, że skumulowany hazard \ref{fig:wykres_loghazardu} estymowany w modelu proporcjonalnych szans rośnie wyraźnie szybciej niż w modelu proporcjonalnych hazardów Coxa. W konsekwencji model proporcjonalnych szans implikuje dla tego pacjenta mniej korzystną prognozę przeżycia, tj. większe narastające ryzyko zdarzenia w czasie, w porównaniu z modelem Coxa.
 
-```{r logarytmy_funkcji}
+Dla pacjenta 2 krzywe \ref{fig:wykres_loghazardu} skumulowanego hazardu są do około 625 dnia bardzo zbliżone, natomiast w dalszej części obserwacji zaczynają się rozchodzić. Różnice między predykcjami modeli narastają wraz z upływem czasu, jednak interpretację końcowego fragmentu należy traktować z ostrożnością — w ogonie rozkładu zwykle pozostaje niewiele obserwacji, a pojedyncze zdarzenia mogą powodować relatywnie duże, skokowe zmiany estymowanych krzywych.
+
+```{r logarytmy_funkcji,fig.cap="wykresy-log(skumulowany hazard)"}
 
 (p1_logH | p2_logH)+
   plot_layout(guides = "collect") &
   theme(legend.position = "bottom")
 ```
-Analogiczne wnioski możemy wysnuć także na podstawie wykresów logarytmów tych funkcji, ponieważ logarytm jest funkcją ściśle rosnącą i dla dodatnich wartości zachowuje relacje.
+Analogiczne wnioski możemy wysnuć także na podstawie wykresu \ref{fig:logarytmy_funkcji} logarytmów  tych funkcji, ponieważ logarytm jest funkcją ściśle rosnącą i dla dodatnich wartości zachowuje relacje.
+
 # Zadanie 5
 
-## Treść
-Wyznaczyć oszacowanie funkcji przeżycia (w dniach) odpowiadającej rozkładowi czasu życia
 
-## Rozwiążanie
-
-```{r wykresy_przeżycia}
+```{r wykresy_przeżycia, fig.cap="wykresy funkcji przeżycia dla pacjentów"}
 
 ggplot()+
   geom_step(data = df1, aes(x = t, y = S0, color = "S01"),linewidth = 1.1)+
@@ -279,13 +264,14 @@ ggplot()+
 
 
 ```
-Z wykresów widać, że funkcja przeżycia dla pacjenta 2 maleje znacznie szybciej, co jest zgodne z charakterystyką danych.
+Z wykresu \ref{fig:wykresy_przeżycia} widać, że funkcja przeżycia dla pacjenta 2 maleje znacznie szybciej, co jest zgodne z charakterystyką danych.
 
 Prawdopodobieństwa tego ,że czas życia będzie większy od 300 , to $$S_{0}2(300)$$ i $$S_{0}1(300)$$
 
 Dla pacjenta 1 to prawdopodobieństwo wynosi:
 
 ```{r dzielny_pacjent_1}
+
 i <- findInterval(300, s1$time)   
 S_300 <- if (i == 0) 1 else s1$S0[i]
 S_300
@@ -329,20 +315,15 @@ Prawdopodobieństwo dla modelu proporcjonalnych hazardów coxa jest większe.
 
 # Zadanie 6
 
-## Treść
-
- Narysować wykres oszacowanej w zadaniu 5 punkt (a) funkcji przeżycia i porównać go z wykresem
-z zadania 6 z listy 10.
-
-## Rozwiązanie
 
 
-```{r zad6}
+```{r zad6, fig.cap="wykresy funkcji przeżycia"}
 
 ggplot()+
   geom_step(data = df1, aes(x = t, y = S0, color = "S01"),linewidth = 1.1)+
   geom_step(data = df1_l10, aes(x = t, y = S0, color = "S01_l10"),linewidth = 1.1)
 
 ```
-Widać, że funkcja przeżycia jest większa dla modelu proporcjonalnych hazardów coxa, niż w obecnym modelu
-proporcjonalnych szans.
+
+Z wykresu \ref{fig:zad6} wynika, że estymowana funkcja przeżycia w modelu proporcjonalnych hazardów Coxa przyjmuje wyższe wartości niż w rozważanym modelu proporcjonalnych szans. Oznacza to, że model Coxa przewiduje korzystniejsze rokowanie (większe prawdopodobieństwo przeżycia od czasu 
+t) w porównaniu z modelem proporcjonalnych szans.
